# automation

./: .gitignore  Makefile  README.md  install.bat  pyproject.toml
src/automation/: main.py  usercenter.py
src/automation/components/: addaccount.py  addimage.py  addpublishaccounts.py  addtogroup.py  addusergroup.py  article.py  articlesetting.py  creatorswidget.py  engine.py  headers.py  horizonvideo.py  leftbar.py  leftmenu.py  membercenter.py  publishaccountlist.py  publishaccounts.py  publishcontrol.py  publishhistory.py  shortnote.py  statistics.py  systemsetting.py  usergroup.py  useritem.py  videosetting.py
src/automation/components/statisticswidgets/: leftmenu.py  table.py
src/automation/models/: db.py  query.py
src/automation/utils/: __init__.py  accounttype.py  auto.py  constant.py  delegates.py  struct.py
src/automation/views/: homeview.py  mainview.py  publishview.py  userview.py
src/automation/workers/: headlessbrowser.py  publishworker.py
temp/: test_js.py
temp/jsscript/: bilibilishiping.js  bilibilituwen.js  douyinshiping.js  douyintuwen.js  kuaishoushiping.js  kuaishoutuwen.js  tenxunweishi.js  toutiaoshiping.js  toutiaotuwen.js  weiboshiping.js  weibotuwen.js  xiguashiping.js  zhihushiping.js  zhihutuwen.js
tests/: test_bili.py  test_db.py  test_layout.py  test_table.py  test_wx.py  test_xg.py  test_xhs.py  test_zh.py
