[project]
name = "automation-py"
version = "0.1.0"
description = "仿蚁小二的自动化工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "certifi>=2025.10.5",
  "charset-normalizer>=3.4.4",
  "click>=8.3.0",
  "colorama>=0.4.6",
  "cssselect>=1.3.0",
  "datarecorder>=3.6.2",
  "downloadkit>=2.0.7",
  "drissionpage>=4.1.1.2",
  "et-xmlfile>=2.0.0",
  "filelock>=3.20.0",
  "greenlet>=3.2.4",
  "idna>=3.11",
  "importlib-metadata>=8.7.0",
  "lxml>=6.0.2",
  "mccabe>=0.7.0",
  "openpyxl>=3.1.5",
  "platformdirs>=4.5.0",
  "playwright>=1.55.0",
  "psutil>=7.1.2",
  "pyee>=13.0.0",
  "pypandoc>=1.15",
  "pyside6>=6.10.0",
  "pyside6-addons>=6.10.0",
  "pyside6-essentials>=6.10.0",
  "qasync>=0.28.0",
  "requests>=2.32.5",
  "requests-file>=3.0.1",
  "shiboken6>=6.10.0",
  "tldextract>=5.3.0",
  "tomli>=2.3.0",
  "typing-extensions>=4.15.0",
  "urllib3>=2.5.0",
  "websocket-client>=1.9.0",
  "xlsxwriter>=3.2.9",
  "zipp>=3.23.0",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.2"]

[tool.mypy]
ignore_missing_imports = true
